--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "jade": "^1.9.2",
+    "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
+    "pug": "^3.0.3",
     "sqlite3": "^5.1.7"
   }
 }
